@@ -20,5 +20,4 @@ INCLUDE_DIRECTORIES(${ATB_INC_DIR})
 LINK_DIRECTORIES(${ATB_LIB_DIR})
 
 ADD_SUBDIRECTORY(sources)
-# ADD_SUBDIRECTORY(examples)
-
+ADD_SUBDIRECTORY(examples)
