@@ -94,3 +94,4 @@
 - Added Porland terrain1 sample in OSG.
 - Added terrain2 and terrain3 examples in OSG.
 - Added terrain4 and terrain5 examples in OSG.
+- Built the terrain preprocess example. But it is not working for the moment: crashing on start. To be investigated.
